<resources>
    <string name="app_name">Bitcoin Ticker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coin_list">Coin List</string>
    <string name="profile">Profile</string>
    <string name="login_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="price_change_percentage_in_24h">Price change percentage in 24h :</string>
    <string name="hello">Welcome Back</string>
    <string name="detail_fragment">detail fragment</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Log out</string>
    <string name="network_error">Couldn\'t reach server check your internet connection</string>
    <string name="auth_success_login">Successfully Logged In</string>
    <string name="auth_wrong_password">The password you entered is incorrect.\nPlease try again.</string>
    <string name="auth_user_not_found">Could not find your Bitcoin Ticker account</string>
    <string name="auth_success_register">Account successfully created</string>
    <string name="auth_failure_register">Something went wrong. User registration failed.</string>
    <string name="auth_user_already_exists">Email already exist, you can try signing in with this email.</string>
    <string name="auth_login_failed">Something went wrong. Login failed.</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_not_valid">Password length should greater than 8 character.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="no_data">The list is empty</string>
    <string name="favorites_add_error">Could not add coin to favorites, try again later</string>
    <string name="favorite_add_success">Successfully added to favorites</string>
    <string name="refresh_seconds">Refresh Seconds</string>
    <string name="set_timer">Set Timer</string>
    <string name="timer_error_message">Please enter a valid number</string>
    <string name="set_time_success">Interval time set successfully</string>
</resources>