<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_purple"
    tools:context=".presentation.fragment.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_fragment_close_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/dark_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/detail_fragment"
            android:padding="4dp"
            android:src="@drawable/ic_close_white" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/profile_fragment_avatar"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_close_button">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_coin_list" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_fragment_favorite_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/dark_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_fragment_avatar"
        app:layout_constraintStart_toStartOf="@+id/profile_fragment_avatar"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_avatar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="8dp"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_star_white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_fragment_log_out_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/dark_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_fragment_favorite_button"
        app:layout_constraintStart_toStartOf="@+id/profile_fragment_favorite_button"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_favorite_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="8dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_log_out_white" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>