<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragment.register.RegisterFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/register_fragment_close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/dark_purple"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_close_white" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/register_fragment_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_your_account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_close_button" />

        <TextView
            android:id="@+id/register_fragment_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/register_fragment_close_button"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_register_text" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_fragment_email_text_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext_input"
            android:importantForAutofill="no"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/register_fragment_email_text"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_email_text">

            <EditText
                android:id="@+id/register_fragment_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edittext_input"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_fragment_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/register_fragment_email_text_input"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_email_text_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_fragment_password_text_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext_input"
            android:textColorHint="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/register_fragment_email_text_input"
            app:layout_constraintStart_toStartOf="@+id/register_fragment_password_text"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_password_text"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/register_fragment_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edittext_input"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/register_fragment_register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="48dp"
            app:cardBackgroundColor="@color/pink"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_password_text_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>